--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -33,7 +33,7 @@ a{
 a:hover{
 	color: orange;
 }
-
+/*
 ol, ul {
 	list-style-type: disc;
 }
@@ -41,18 +41,18 @@ ol, ul {
 li{ 
 	margin-bottom:8px;
 }
-
+*/
 ol h3, ul h3 {
 	font-weight:bold;
 	margin-bottom:15px;
 }
 
-
+/*
 ol ol, ul ul{
 	margin-left:20px;
 	list-style-type: circle;
 }
-
+*/
 
 h1 {	
   font-size: 50px;
@@ -136,10 +136,16 @@ header
 	color: red;
 	padding: 5px;
 }
+
+
 /* 
 	ESTILOS REUTILIZABLES
     Regla con selector por CLASS para usar en todas las paginas
 */
+.clear
+{
+	clear: both;
+}
 
 .cnt_article
 {
@@ -188,7 +194,8 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 	color:green;	
 }
 
-.cartel{
+.cartel
+{
 	float:left;
 	margin-right:30px;
 	width:250px;
@@ -211,7 +218,8 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 
 
 /* HOME */
-#home{
+#home
+{
 
 }
 
@@ -288,3 +296,118 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 
 
 
+/* MENU */
+
+header
+{
+	
+}
+nav
+{
+	padding: 10px 0 10px 0;
+	/* overflow: hidden; */
+	position: fixed;
+	
+	top: 100px;
+
+}
+
+ul
+{
+	list-style-type: none;
+}
+
+nav > ul > li
+{
+	float: left;
+}
+
+nav li a
+{
+	text-decoration: none;
+	background-color: #eeeeee;
+	color: blue;
+	display: block;
+	width: 90px;
+	padding: 10px 15px;
+	margin-right: 10px;
+	font-size: 10px;
+}
+
+nav li a:hover
+{
+	background-color: #cccccc;
+	color: blue;
+}
+
+ol h3, ul h3 {
+	
+	margin-bottom:15px;
+	margin-right: 10px;
+	width: 110px;
+	font-weight:bold;
+	font-size: 18px;
+	overflow: hidden;
+}
+
+
+
+nav > ul > li > ul
+{
+	display: none;	
+	margin-bottom:15px;
+	margin-right: 10px;
+	width: 110px;
+}
+
+nav > ul > li > ul > li > ul
+{
+	display: none;	
+}
+nav > ul > li > h3:hover + ul
+{
+	display: block;	
+}
+nav > ul > li:hover > ul
+{
+	display: block;	
+}
+
+nav > ul > li > ul > li > ul
+{
+	display: none;	
+}
+nav > ul > li > ul > li > h4:hover + ul
+{
+	display: block;	
+}
+
+#home
+{
+	position: absolute;
+	top: 420px;
+	
+}
+
+footer
+{
+	position: absolute;
+	top: 1000px;
+	
+}
+header, nav
+{
+	position: fixed;
+	background-color: white; /* si no le pongo esto es transparente y se ve lo que hay por detrás */
+	z-index: 999;
+}
+header div
+{
+	float:left;	
+}
+
+header h1
+{
+	float:left;	
+	
+}
