--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -13,6 +13,15 @@
 @import url("reset.css");
 
 
+/***************************** 
+      ClearFix
+*******************************/
+
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { *zoom: 1; }
+
+
 /* 
 
    ETIQUETAS 
@@ -24,6 +33,10 @@ body{
 	background: url('../img/back2.jpg');
 	font-family: arial;
 }
+
+figure{}
+figcaption{}
+
 a{
 	text-decoration:none;
 }
@@ -33,7 +46,7 @@ a{
 a:hover{
 	color: orange;
 }
-/*
+
 ol, ul {
 	list-style-type: disc;
 }
@@ -41,18 +54,18 @@ ol, ul {
 li{ 
 	margin-bottom:8px;
 }
-*/
+
 ol h3, ul h3 {
 	font-weight:bold;
 	margin-bottom:15px;
 }
 
-/*
+
 ol ol, ul ul{
 	margin-left:20px;
 	list-style-type: circle;
 }
-*/
+
 
 h1 {	
   font-size: 50px;
@@ -73,6 +86,10 @@ p{
 	line-height:20px;
 }
 
+mark{
+	background-color: yellow;
+}
+
 fieldset{
 	border:1px solid grey;	
 	padding: 20px 30px;
@@ -82,6 +99,120 @@ fieldset{
 legend{
 	font-weight: bold;
 }
+
+
+article{
+	border:1px solid #013729;
+	padding:20px;
+	margin-bottom: 25px;
+}
+article h1{
+	background-color:#DDD;
+	color:#C10D57;	
+	font-size: 25px;
+	padding: 5px 0;
+}
+
+footer{
+	border:1px solid #DDD;
+	padding: 10px 5px;
+	margin-top: 10px;
+}
+
+
+
+/************************
+          HEAD 
+*************************/
+
+
+#head{
+	position: fixed;
+	background-color: #FFF; 
+	width: 900px;
+	padding-top: 10px;
+}
+
+#head #logo, #head h1{
+	float:left;
+}
+
+#head h1{
+	color:#7B02F5;
+	font-size: 30px;
+}	
+
+#logo img{		
+	width: 50px;
+	height: 50px;
+}
+
+
+/************************
+      MENU PRINCIPAL 
+*************************/
+
+	header { 100%; }
+
+	nav * {
+		padding: 0px;
+		margin: 0px;
+	}
+	nav {
+		margin: 0px auto;
+		width: 100%;
+		font-size: 12px;
+		font-family: Arial, Helvetica, sans-serif;
+	}
+	nav ul, nav ol {
+		list-style: none;
+	}
+	nav ul ul {
+		margin: 0px;
+	}
+	nav h2, nav h3 {
+		margin: 0px;
+	}
+	
+	.menu li a, .menu li h2, .menu li h3 {
+		background-color: black;
+		color: white;
+		text-decoration: none;
+		text-align: center;
+		padding: 10px 15px;
+		display: block;
+	}
+	
+	.menu li h2:hover, .menu li h3:hover, .menu li a:hover {
+		background-color: #434343;
+	}
+	.menu > li {
+		float: left;
+	}	
+	.menu li ul {
+		display: none;
+		position: absolute;
+		min-width: 175px;
+	}
+	
+	.menu li:hover > ul{
+		display: block;
+	}
+	
+	.menu li ul li{
+		position: relative;
+	}
+	.menu li ul li ul{
+		right: -175px;
+		top: 0px;
+	}
+
+/* contenedor */
+
+#content{
+	  padding-top: 120px;
+}
+
 
 /*
 	validaciones formularios
@@ -96,67 +227,11 @@ form input[type="text"]:focus:required:invalid{
 }
 
 
-footer img
-{
-	width:50px;
-	height: 50px;
-}
-
-
-mark
-{
-	background-color: cyan;
-}
-
-article
-{
-	border: 1px solid gray;
-	padding: 20px;
-	margin-bottom: 25px;
-}
-article h2
-{
-	background-color: blue;
-	color: white;
-	font-size: 25px;
-	padding: 5px 0;
-	
-}
-
-footer
-{
-	border: 1px solid green;
-	height: 30px;
-	padding:10px;
-	
-}
-header
-{
-	background-color: gray;
-	color: red;
-	padding: 5px;
-}
-
-
 /* 
 	ESTILOS REUTILIZABLES
     Regla con selector por CLASS para usar en todas las paginas
 */
-.clear
-{
-	clear: both;
-}
 
-.cnt_article
-{
-	border: 1px solid blue;
-	padding: 10px 0;
-	margin: 10px 0;
-	/*
-	height: 100px;
-	margin: 10px 0;
-	*/
-}
 
 table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 	border:1px solid grey;
@@ -177,13 +252,13 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 
 
 .btn_volver{
-	background-color:#DDDDDD;
+	background-color:#FFF;
 }
 
 .numero{
   color: #0099FF;
   font-family: arial;
-  font-size: 150px;		
+  font-size: 50px;		
 }
 
 .hightlight{
@@ -194,13 +269,18 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 	color:green;	
 }
 
-.cartel
-{
+.cartel{
 	float:left;
 	margin-right:30px;
 	width:250px;
 	height:auto;
 }
+
+.cnt_article{
+	padding:20px;
+	border:1px solid #DDD;
+}
+
 
 
 /*
@@ -209,21 +289,18 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 
 */
 
-/* NAV */
 
-#logo img{
-	width: 35px;
-	height: 35px;
-}
+
 
 
 /* HOME */
 #home
 {
-
+	/*border: 1px solid black;*/
 }
 
 /* CARTELERA */
+
 #cartelera li h3{
   color: #0076EC;
   font-family: "dinengschriftstd", "Another Font", generic;
@@ -257,7 +334,7 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 #container{
 	width:900px;
 	background-color:#FFF;
-	min-height:1400px;
+	min-height:700px;
 	margin:0 auto;	
 	padding:0 20px;
 	border-right:1px solid grey;
@@ -296,20 +373,26 @@ table.tabla_azul, .tabla_azul tr, .tabla_azul td{
 
 
 
-/* MENU */
-
-header
+.s_index
 {
-	
+	float: left;
+	/* border: 1px solid red; */
+	width: 72%;
+	margin-right: 2%;
 }
-nav
+.as_index
 {
-	padding: 10px 0 10px 0;
-	/* overflow: hidden; */
-	position: fixed;
-	
-	top: 100px;
+	float: left;	
+	/* border: 1px solid green; */
+	width: 21%;
+	background-color: #DDD;
+	min-height: 300px;
+	padding: 2%;
+}
 
+.clear
+{
+	 clear: both; 
 }
 
 ul
@@ -317,97 +400,128 @@ ul
 	list-style-type: none;
 }
 
-nav > ul > li
+.s_index img
 {
 	float: left;
 }
-
-nav li a
+.controles-dado
 {
-	text-decoration: none;
-	background-color: #eeeeee;
-	color: blue;
+	float: left;	
+}
+
+.s_index label
+{
 	display: block;
-	width: 90px;
-	padding: 10px 15px;
-	margin-right: 10px;
-	font-size: 10px;
 }
 
-nav li a:hover
+.as_index h3
 {
-	background-color: #cccccc;
+	font-size: 24px;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
+	border-bottom: 3px solid #999999;
+}
+
+.as_index ul
+{
+	font-size: 18px;
 	color: blue;
 }
 
-ol h3, ul h3 {
-	
-	margin-bottom:15px;
-	margin-right: 10px;
-	width: 110px;
-	font-weight:bold;
-	font-size: 18px;
-	overflow: hidden;
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
 
 
-
-nav > ul > li > ul
+footer span
 {
-	display: none;	
-	margin-bottom:15px;
-	margin-right: 10px;
-	width: 110px;
+	float: left;	
+	width: 28%;
+	margin-right: 10%;
+}
+footer #list_paginas
+{
+	float: left;	
+	width: 28%;
+	margin-right: 2%;
+}
+footer #list_rrss
+{
+	float: left;
+	width: 28%;
+	margin-right: 2%;
 }
 
-nav > ul > li > ul > li > ul
+
+#cartelera li
 {
-	display: none;	
+	float: left;
+	width: 30%;
+	margin-right: 3%;
 }
-nav > ul > li > h3:hover + ul
+/*
+#cartelera li:nth-child(3n+0)
 {
-	display: block;	
+	margin: 0;
 }
-nav > ul > li:hover > ul
+*/
+#cartelera .cartel
 {
-	display: block;	
+	position: relative;
+	width: 200px;
 }
 
-nav > ul > li > ul > li > ul
-{
-	display: none;	
-}
-nav > ul > li > ul > li > h4:hover + ul
-{
-	display: block;	
-}
-
-#home
+#cartelera .titulo
 {
 	position: absolute;
-	top: 420px;
-	
+	bottom: 0;
+	background: rgb(0,0,0);
+	opacity: 0.48;
+	width: 98%;
+	padding: 1% 1%;
+	min-height: 40px;
+	display:none;
 }
 
-footer
+#cartelera .cartel:hover .titulo
 {
-	position: absolute;
-	top: 1000px;
-	
-}
-header, nav
-{
-	position: fixed;
-	background-color: white; /* si no le pongo esto es transparente y se ve lo que hay por detrás */
-	z-index: 999;
-}
-header div
-{
-	float:left;	
+	display: block;
 }
 
-header h1
+#cartelera .titulo h3
 {
-	float:left;	
-	
+	color: #0099ff;
+	text-align: center;
 }
+	
+#head
+{
+	z-index: 100;
+}	
+	
+	
+	
+
